--- a/Esercizio 6/CMakeLists.txt
+++ b/Esercizio 6/CMakeLists.txt
@@ -3,4 +3,21 @@ project(Esercizio_6)
 
 set(CMAKE_CXX_STANDARD 26)
 
-add_executable(Esercizio_6 main.cpp)
+add_executable(Esercizio_6 main.cpp
+        Device.cpp
+        Device.h
+        Observer.h
+        Position.cpp
+        Position.h
+        Smartphone.cpp
+        Smartphone.h
+        Tablet.cpp
+        Tablet.h
+        Laptop.cpp
+        Laptop.h
+        GPS.cpp
+        GPS.h
+        Notifier.cpp
+        Notifier.h
+        App.cpp
+        App.h)
